# age-by-face

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  main.py  pyproject.toml
.dvc/: config
age_by_face/: commands.py  data.py  infer.py  model.py  module.py  train.py  train_cli.py  types.py
age_by_face/cli/: commands.py  train_cli.py
age_by_face/data/: dataset.py
age_by_face/inference/: evaluate.py  infer.py
age_by_face/models/: architecture.py  convnext.py  hybrid.py  module.py  resnet.py  transformer.py
age_by_face/training/: train.py
age_by_face/utils/: backbone.py  checkpoint_utils.py  download_data.py  path_utils.py
conf/: config.yaml
conf/dataset/: age_db.yaml  appa_real.yaml  base.yaml  cacd.yaml  common.yaml  dataset.yaml  imdb_clean.yaml  mixed.yaml  morph_2.yaml
conf/eval/: evaluation.yaml
conf/logging/: logging.yaml
conf/model/: base.yaml  common.yaml  convnext.yaml  hybrid.yaml  resnet18.yaml  resnet50.yaml  transformer.yaml
conf/training/: training.yaml
data/: age_db.dvc  appa_real.dvc  cacd.dvc  eda.dvc  imdb_clean.dvc  mixed.dvc  morph_2.dvc
scripts/: collect_metrics.sh  evaluate_all.sh  evaluate_all_final.sh  evaluate_all_initial.sh  evaluate_all_preprocessed.sh  train_all.sh  train_resnet.sh
